--- a/index.html
+++ b/index.html
@@ -6,38 +6,19 @@
     <meta charset="UTF-8" />
     <title>Arraiá do Regente</title>
 
-    <link rel="stylesheet" href="/css/reset.css" />
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="css/reset.css" />
+    <link rel="stylesheet" href="css/style.css" />
 </head>
 
 <body>
     <header>
-        <h1>Playlist Literária</h1>
-        <hr />
-        <p>Crie uma playlist destacando personagens, cenas e temas de um romance que discutimos neste ano letivo.</p>
-        <p>Prazo final: 16 de maio</p>
+        <h1>Colégio Regente Apresenta</h1>
+        <hr/>
     </header>
     <main>
-        <ul>
-            <li>
-                <h2>01</h2>
-                <p>Com sua dupla, escolha um romance para inspirar sua playlist.</p>
-            </li>
-            <li>
-                <h2>02</h2>
-                <p>Crie uma lista com dez músicas.</p>
-            </li>
-            <li>
-                <h2>03</h2>
-                <p>Para cada música da lista, explique num parágrafo por que você acha que ela se adequa ao personagem
-                    ou ao
-                    tema do romance.</p>
-            </li>
-            <li>
-                <h2>04</h2>
-                <p>Prepare-se para apresentar sua playlist na aula.</p>
-            </li>
-        </ul>
+        <img class="placa" src="imagens/placa_junina.png" alt="Placa: Festa Junina"/>
+        <h2>Correio Elegante</h2>
+        <a href="formulario.html">Mande sua mensagem</a>
     </main>
 </body>
 
