--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
     </header>
     <main>
         <img class="placa" src="imagens/placa_junina.png" alt="Placa: Festa Junina"/>
-        <h2>Correio Elegante</h2>
-        <a href="formulario.html">Mande sua mensagem</a>
+        <div class="principal">
+            <h2 class="mensagem-principal">Correio Elegante</h2>
+            <a class="link" href="formulario.html">Mande sua mensagem</a>
+        </div>
     </main>
 </body>
 
